terraform/modules/security_groups/main.tf
resource "aws_security_group" "app_sg" {
  name        = "inventory-app-sg-${var.environment}"
  description = "Security Group for Spring Boot Inventory Application"
  vpc_id      = var.vpc_id

  # SSH Access
  ingress {
    description = "SSH access"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # Limit to trusted IPs in production
  }

  # HTTP (Nginx Web Reverse Proxy)
  ingress {
    description = "HTTP web traffic"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Spring Boot Backend direct access
  ingress {
    description = "Direct Spring Boot port"
    from_port   = 8086
    to_port     = 8086
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Jenkins Dashboard portal
  ingress {
    description = "Jenkins console panel"
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Outbound rules - Allow all outgoing traffic
  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = merge(var.tags, { Name = "inventory-app-sg-${var.environment}" })
}
